[gd_scene load_steps=2 format=3 uid="uid://ew8c4mc9pwtjw"]

[ext_resource type="Script" path="res://algorithms/datastructures/trie_operations/TrieOperations.gd" id="1_trie_ops"]

[node name="TrieOperations" type="Node3D"]
script = ExtResource("1_trie_ops")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.5, 0.866, 0, -0.866, 0.5, 0, 15, 10)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 18, 0)
light_energy = 1.2

[node name="TrieNodes" type="Node3D" parent="."]

[node name="TrieEdges" type="Node3D" parent="."]

[node name="RootNode" type="CSGSphere3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0)
radius = 0.4

[node name="WordCounter" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, -3, 0)
size = Vector3(0.5, 1, 0.3)

[node name="PrefixIndicator" type="CSGCylinder3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, -3, 0)
top_radius = 0.3
bottom_radius = 0.3
height = 0.5
